# cppgrad

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  LICENSE_3rdparty  README.md  transposed addressing.txt
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cmake/: build_extras.cmake  setup_asyncpp.cmake  setup_gtest.cmake
examples/: CMakeLists.txt  autograd.cpp  bench_dot.cpp  bench_matmul.cpp  distributed.cpp  example1.cpp  mnist.cpp  mnist_distributed.cpp
include/cppgrad/: config.hpp  cppgrad.hpp  cppgrad_defs._hpp  misc_ops.hpp  nn.hpp  tensor.hpp  value.hpp
include/cppgrad/autograd/: context.hpp  grad_mode.hpp  impl.hpp  misc_ops.hpp  node.hpp  value.hpp
include/cppgrad/device/: cpu.hpp  default_devices.hpp  device.hpp  executor.hpp  registry.hpp  tags.hpp
include/cppgrad/device/cpu/: cpu.hpp  cpu_executor.hpp  cpu_parallel.hpp  static_thread_pool.hpp
include/cppgrad/device/cuda/: cuda.hpp  cuda_defs.hpp  cuda_executor.hpp  fill_kernel.cuh  strided_copy_kernel.cuh
include/cppgrad/device/cuda/kernels/: ops_kernels.cuh  strided_copy_kernel.cuh
include/cppgrad/distributed/: comm.hpp  error_string.hpp  guard.hpp
include/cppgrad/exceptions/: generic_error.hpp  index_error.hpp  mpi_error.hpp  out_of_memory.hpp  type_error.hpp
include/cppgrad/itertools/: combine.hpp  itertools.hpp  reversed.hpp
include/cppgrad/nn/: linear.hpp  losses.hpp  module.hpp  optim.hpp
include/cppgrad/tensor/: impl.hpp  impl_util.hpp  tensor.hpp  tensor_fwd.hpp  typing.hpp
include/cppgrad/tensor/ops/: binary_ops.hpp  grad_ops.hpp  op_overloads.hpp  op_wrapper.hpp  unary_ops.hpp
include/cppgrad/tensor/util/: impl_util.hpp  strided_span.hpp
src/autograd/: context.cpp  node.cpp
src/device/: cpu.cpp
src/device/cpu/: cpu.cpp  cpu_executor.cpp
src/device/cuda/: cuda.cu  cuda_executor.cu
src/distributed/: comm.cpp  guard.cpp
src/nn/: linear.cpp  losses.cpp  module.cpp
src/tensor/: binary_ops.cpp  grad_ops.cpp  op_overloads.cpp  tensor.cpp  unary_ops.cpp
tests/: CMakeLists.txt  autograd_tests.cpp  autograd_tests_cuda.cpp  basic_tests.cpp  cppgrad_tests.cpp  nn_module_tests.hpp  nn_tests.cpp  tensor_cuda_ops_tests.cpp  tensor_cuda_tests.cpp  tensor_grad_tests.cpp  tensor_ops_tests.cpp  tensor_tests.cpp
